--- a/app/src/pages/global/styles/ReferenceBar.scss
+++ b/app/src/pages/global/styles/ReferenceBar.scss
@@ -102,7 +102,7 @@
 
 .ref_pop{
     background-color: #311d4e;
-    z-index: 100;
+    z-index: 5;
     display: flex;
     position: absolute;
     display: flex;
